# jlsp

./: .build.yml  .gitignore  LICENSE
tree-sitter-janet/: .gitattributes  .gitignore  example  grammar.js  tree-sitter.json
tree-sitter-janet/src/: grammar.json  node-types.json  parser.c
tree-sitter-janet/tests/: comments.janet  cram.cram  cram.cram.orig  keywords.janet  symbols.janet
vscode/: dune-project
